feat: add common layout

--- a/src/app/(posts)/hi/page.mdx
+++ b/src/app/(posts)/hi/page.mdx
@@ -3,10 +3,11 @@ export const meta = {
   title: "Hello world!",
   date: "2024-01-01",
   preview: "안녕하세요 반갑습니다. 오랜만이에요",
-  tag: "test",
+  tag: "test1",
 };
 
 <Header {...meta} />
+
 ## 개발 내용
 
 ---
@@ -110,5 +111,3 @@ const selectField = (e) => {
 ---
 
 한번 작성한 코드를 다시 되돌이켜 보는 습관을 길러야겠다. 언제나 최선의 코드를 작성하도록 지향하고자 하지만 실제로는 시간에 쫓겨 디테일한 부분을 신경쓰지 못하는 경우가 많은 것 같다. 이러한 부분을 고쳐나가야겠다.
-
-<Footer />
