--- a/src/app/(contents)/first-blog/page.mdx
+++ b/src/app/(contents)/first-blog/page.mdx
@@ -10,7 +10,7 @@ export const meta = {
 
 ## 드디어 블로그를 만들었다.
 
-옛날부터 해야지 해야지 했었지만, 그만큼 미루고 미뤄둔 ‘나만의 블로그’ 만들기! 
+옛날부터 해야지 해야지 했었지만, 그만큼 미루고 미뤄둔 ‘나만의 블로그’ 만들기!
 이번에 지원서를 작성하면서, 나만의 강점이 뭘까에 대해서 많이 고민했고 앞으로 어떤 경쟁력을 갖춰야 할까?를 많이 생각했다.
 
 > 기록은 거짓말을 하지 않는다.
@@ -27,14 +27,11 @@ export const meta = {
 
 나도 이 글에 공감하며 나만의 블로그를 만들어보겠노라 다짐을 한지 어언 1년. . . .
 
-
 사실 그 동안 좀 바빴기도 하고 무엇보다 블로그를 만들 동기가 부족했다. 지금 벨로그로도 충분히 잘 쓰고 있고, 노션에도 프로젝트를 하면서 겪은 트러블 슈팅글을 작성해두고 있었기 때문에 ‘기록만 잘 해두면 되지~’ 라는 생각으로 지내고 있었다.
 
 그러나 25년이 밝아왔고 나는 슬슬 취준에 발을 들였다. 취준을 위해서는 포트폴리오를 만들어야 했는데, 트러블 슈팅 글이 여기 저기에 분산되어 있었다. 프로젝트 A의 트러블 슈팅 글은 프로젝트 A 노션에 있었고, 프로젝트 B의 글은 B 노션에 작성되어 있었다. 따라서 나는 해당 글들을 모두 복사해서 내 노션에 붙여넣기 한 형태로 관리하고 있었다.
 
 위와 같은 형태이다 보니, 원본 글이 업데이트 되면 내가 손수 내 노션에 있는 복사본도 업데이트를 해줘야 했다. 사실 이건 엄청나게 큰 문제가 아니었다. 가장 큰 문제는 ‘블로그의 정체성’이었다.
-
-
 
 내 벨로그(Velog)는 알고리즘 + 일상 회고록으로 사용되고 있었다. 그러나 트러블 슈팅과 같이 기술 관련된 글도 어딘가에 저장을 해야 하는데, 나는 노션, 벨로그 둘 다 내 맘에 썩 들지 않았다. 벨로그는 위에서 말했듯이 자유로운 커스터마이징이 불가능하고, 노션은 글들을 관리하기엔 뛰어나지만 그 글들을 보여주는 것에 있어서는 너무 ‘대중적’이었다.
 
@@ -74,9 +71,9 @@ NextJS에서 공식으로 지원하는 로컬에서의 마크다운 파일을 HT
 
 ### next-mdx-remote
 
-마크다운 파일을 로컬이 아닌 서버에서 fetch하여 사용한다. 물론 Node의 fs 모듈을 이용해 로컬 파일을 읽어온 후 next-mdx-remote의 serialize 함수를 써서 파싱하는 방법도 있지만, 이 경우 자동 파일 기반 라우팅이 지원되지 않아 MDX 콘텐츠를 따로 props로 전달하는 추가 작업이 필요하다. 그래서 설정 복잡성이나 유지보수 측면에서는 @next/mdx보다 불편하게 느껴질 수밖에 없다.
+서버의 getStaticProps나 getServerProps에서 MDX 콘텐츠를 fetch하거나 로컬 파일을 읽어 처리할 수 있어, CMS나 API 등 외부 소스와의 연동이 용이하다. 그러나 파일 기반 라우팅을 자동으로 제공하지 않기 때문에, MDX 콘텐츠를 props로 전달하는 등의 추가 작업이 필요하다. 거기에 더불어 MDX 파일 내 import/export 문법 지원이 제한적이다. 만약 글들을 외부 소스로부터 받아오는 방식이었다면, 해당 라이브러리를 사용했을 것이다.
 
-따라서 @next/mdx 라이브러리를 사용하기로 결정했다!
+위 요소들을 고려하여 나는 설정이 단순하고 파일 기반 라우팅을 자동으로 지원하며, 로컬 MDX 콘텐츠를 활용하는 @next/mdx 라이브러리를 사용하기로 결정했다!
 
 ## @next/mdx 라이브러리 사용하기
 
