--- a/src/app/(contents)/create-blog/page.mdx
+++ b/src/app/(contents)/create-blog/page.mdx
@@ -71,14 +71,25 @@ import { Pre } from "./components/Pre";
 import Header from "./components/Header";
 import Footer from "./components/Footer";
 
-const H1: React.FC<React.HTMLAttributes<HTMLHeadingElement>> = (props) => (
-  <h1 className="text-4xl font-bold my-7" {...props} />
+const H1 = (props: React.HTMLAttributes<HTMLHeadingElement>) => (
+  <h1
+    className="text-[var(--text)] text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold my-7"
+    {...props}
+  />
 );
-const H2: React.FC<React.HTMLAttributes<HTMLHeadingElement>> = (props) => (
-  <h2 className="text-3xl font-semibold my-6" {...props} />
+
+const H2 = (props: React.HTMLAttributes<HTMLHeadingElement>) => (
+  <h2
+    className="text-[var(--text)] text-xl sm:text-2xl md:text-3xl lg:text-4xl font-semibold my-6"
+    {...props}
+  />
 );
-const H3: React.FC<React.HTMLAttributes<HTMLHeadingElement>> = (props) => (
-  <h3 className="text-2xl font-semibold my-5" {...props} />
+
+const H3 = (props: React.HTMLAttributes<HTMLHeadingElement>) => (
+  <h3
+    className="text-[var(--text)] text-lg sm:text-xl md:text-2xl lg:text-3xl font-semibold my-5"
+    {...props}
+  />
 );
 . . .
 
