docs: edit react-bubbling article

--- a/src/app/(contents)/react-bubbling/page.mdx
+++ b/src/app/(contents)/react-bubbling/page.mdx
@@ -45,7 +45,7 @@ function OrderDetailModalButton({ order }: Props) {
 export default OrderDetailModalButton;
 ```
 
-그리고 `useModal` 훅을 살펴보자.
+`useModal`훅에서 모달 관련 함수 및 변수들을 받아와서 사용하고 있다. 이제 `useModal` 훅을 살펴보자.
 
 ```tsx,title=useModalHook
 function useModal() {
