fix: markdown url

--- a/src/app/(contents)/2025-first-half/page.mdx
+++ b/src/app/(contents)/2025-first-half/page.mdx
@@ -124,7 +124,7 @@ export const meta = {
 
 우선 라이브러리의 코드를 해석하는데 어려움이 있었다. 뭐가 뭔지 뱀처럼 꼬여있기도 하고 대충 보니 옵저버 패턴인 것 같은데, 자세한 구동원리를 파악하는데 오래 걸렸다. 그리고 코드를 고치고 이를 실제로 사용하는 방법을 찾는데까지 너무 오래 걸렸다. npm link를 사용하면 된다길래 그렇게 했는데 도저히 안돼서,,, pnpm의 override기능을 통해 로컬에 있는 라이브러리를 사용하도록 했다.
 
-제미나이와 함께 라이브러리 구조를 이해해 나가며 문제가 되는 부분을 찾았고, 이제는 이슈만 제기하면 됐다. 이때쯤 엄청 긴장이 되기 시작했다. 네이버 페이 사람들이 관리하는 레포지토리에 이슈를 제기한다니, 뭔가 미리 면접장에 들어가는 듯한 기분이었다. ‘내가 생각한게 틀린거면 어떡하지?, 사실 의도 되었던 건 아닐까?’라는 생각을 계속하게 됐다. 그러나 면접에서 가점을 얻기 위해선 무엇이든 할 수 있었기에 몸은 이미 이슈를 작성하고 있었다. 그렇게 ‘문제 - 원인 - 해결방안 - 재현’의 구조로 이슈를 제기했고, 리뷰를 기다렸다. 이후 이슈 작성일로부터 약 1주일 뒤에 답변을 해주셨고, 실제로 반영 https://github.com/NaverPayDev/pie/pull/181이 됐다.
+제미나이와 함께 라이브러리 구조를 이해해 나가며 문제가 되는 부분을 찾았고, 이제는 이슈만 제기하면 됐다. 이때쯤 엄청 긴장이 되기 시작했다. 네이버 페이 사람들이 관리하는 레포지토리에 이슈를 제기한다니, 뭔가 미리 면접장에 들어가는 듯한 기분이었다. ‘내가 생각한게 틀린거면 어떡하지?, 사실 의도 되었던 건 아닐까?’라는 생각을 계속하게 됐다. 그러나 면접에서 가점을 얻기 위해선 무엇이든 할 수 있었기에 몸은 이미 이슈를 작성하고 있었다. 그렇게 ‘문제 - 원인 - 해결방안 - 재현’의 구조로 이슈를 제기했고, 리뷰를 기다렸다. 이후 이슈 작성일로부터 약 1주일 뒤에 답변을 해주셨고, 실제로 [반영](https://github.com/NaverPayDev/pie/pull/181)이 됐다.
 
 ### 네이버 페이 면접 당일
 
