--- a/src/app/(contents)/2025-first-half/page.mdx
+++ b/src/app/(contents)/2025-first-half/page.mdx
@@ -73,11 +73,8 @@ export const meta = {
   src="/images/2025-first-half/2025-first-half2.jpeg"
   alt="소프티어 부트캠프"
 />
-소프티어 6기는 직군 별로 대략 15명의 정원이었다. DE, FE, BE, 기획, 디자인 총 5개의
-직군이었으니 총 정원은 75명이다. 소프티어 커리큘럼은 총 8주로 구성되어 있는데, 3주는
-직무 교육(Vanilla JS로 웹 사이트 만들기), 그리고 나머지 5주는 종합 프로젝트를 진행한다.
-여기서 중요한 부분이 종합 프로젝트인데, 해당 프로젝트는 기획, 디자인, FE, BE 각 2명씩
-구성이 되어 총 8명이 한 팀을 이룬다.
+
+소프티어 6기는 직군 별로 대략 15명의 정원이었다. DE, FE, BE, 기획, 디자인 총 5개의 직군이었으니 총 정원은 75명이다. 소프티어 커리큘럼은 총 8주로 구성되어 있는데, 3주는 직무 교육(Vanilla JS로 웹 사이트 만들기), 그리고 나머지 5주는 종합 프로젝트를 진행한다. 여기서 중요한 부분이 종합 프로젝트인데, 해당 프로젝트는 기획, 디자인, FE, BE 각 2명씩 구성이 되어 총 8명이 한 팀을 이룬다.
 
 그러나 종합 프로젝트로 평가를 받는건 개발자들만이었다. 기획, 디자이너분들은 8월에 진행하는 개인 프로젝트로 평가를 받는다고 한다. 즉, 개발자들이 직무교육을 받는 3주 동안 기획, 디자이너 분들은 열심히 프로젝트 기획, 디자인을 해주시고 우리는 나머지 5주 동안 실제 프로덕트로 만드는 프로세스였다.
 
@@ -136,19 +133,15 @@ export const meta = {
   src="/images/2025-first-half/2025-first-half4.png"
   alt="네이버 가는 길"
 />
-약 2년 반만에 다시 오는 정자역이었다. 기억 속을 더듬으며 네이버 본사로 향했다. 7월이어서
-그런지 약 10분 정도 걸었는데, 도착하니 땀으로 샤워를 한 수준이었다…
+
+약 2년 반만에 다시 오는 정자역이었다. 기억 속을 더듬으며 네이버 본사로 향했다. 7월이어서 그런지 약 10분 정도 걸었는데, 도착하니 땀으로 샤워를 한 수준이었다…
 
 <MDXImage
   src="/images/2025-first-half/2025-first-half5.jpeg"
   alt="네이버 1784"
 />
-면접 시간까지 약 30분을 남기고 도착하니, 소프티어 입과 안내 메일이 와 있었고, 부리나케
-써서 제출했다. 인터뷰 룸으로 들어갈 시간이 다 되어 3층에 위치한 인터뷰 룸으로 입장했다.
-인터뷰 룸은 뭔가 오묘한 느낌이었다. 약간 어렸을 때 인상깊게 본 인크레더블이 생각났다.
-들어가면 데스크가 있고, 과자나 음료를 마시며 창밖을 볼 수 있는 대기 공간이 있었다.
-대기 공간 뒤로는 여러개(한 8개?)의 인터뷰 룸이 넓은 복도를 기준으로 좌, 우 번갈아
-가며 있었다. 굉장히 SF적인 느낌이 드는 인터뷰 룸이었다.
+
+면접 시간까지 약 30분을 남기고 도착하니, 소프티어 입과 안내 메일이 와 있었고, 부리나케 써서 제출했다. 인터뷰 룸으로 들어갈 시간이 다 되어 3층에 위치한 인터뷰 룸으로 입장했다. 인터뷰 룸은 뭔가 오묘한 느낌이었다. 약간 어렸을 때 인상깊게 본 인크레더블이 생각났다. 들어가면 데스크가 있고, 과자나 음료를 마시며 창밖을 볼 수 있는 대기 공간이 있었다. 대기 공간 뒤로는 여러개(한 8개?)의 인터뷰 룸이 넓은 복도를 기준으로 좌, 우 번갈아 가며 있었다. 굉장히 SF적인 느낌이 드는 인터뷰 룸이었다.
 
 ### 면접
 
@@ -159,6 +152,7 @@ export const meta = {
 무난한 초반을 넘기고 코테 과제 코드리뷰로 넘어가게 됐다. 코테 과제는 테스트 케이스를 통과시키는데 급급하게 AI로 작성한 코드였기에 사실상 코드의 퀄리티 및 주도권이 나에겐 없었다. 폭풍 질문이 들어왔고, 나는 ‘이건 제가 짠 부분이 아니라서..’ 라는 말만 되풀이했다. 면접관분들도 할 말이 없어지자 가운데 계신 무서운 포스의 면접관님이 입을 열었다.
 
 <MDXImage src="/images/2025-first-half/2025-first-half6.png" alt="면접 질문" />
+
 ‘우리가 코테에서 평가하고자 한 항목이 뭐라고 생각해요?’
 
 나에겐 마치 ‘이건 AI가 짠거지 너가 짠게 아니잖아, 우리가 너의 어떤 역량을 평가해야 하지?’ 라고 들렸다. 나는 내가 생각한 평가기준들을 말했고, 내가 달성한 부분과 충족하지 못한 부분들도 부연설명(변명)을 했다. 거기서 그치지 않고 계속된 압박이 들어왔다.
@@ -191,6 +185,7 @@ export const meta = {
   src="/images/2025-first-half/2025-first-half7.jpeg"
   alt="네이버에서 받은 물"
 />
+
 이후 정말 며칠을 면접 상황이 생각나서 잠을 못잤다.
 
 ### 결과는?
@@ -201,9 +196,8 @@ export const meta = {
   src="/images/2025-first-half/2025-first-half8.png"
   alt="네이버 페이 인턴 합격"
 />
-그 당시에 오전 수업을 듣고 있었는데, 합격 사실을 보자마자 정말 ‘이게 진짠가?’ 싶었다.
-그 뒤로 수업은 전혀 귀에 들어오지도 않았고 이 사실을 어떻게 강사님께, 팀원들에게
-전할지 걱정이 됐다.
+
+그 당시에 오전 수업을 듣고 있었는데, 합격 사실을 보자마자 정말 ‘이게 진짠가?’ 싶었다. 그 뒤로 수업은 전혀 귀에 들어오지도 않았고 이 사실을 어떻게 강사님께, 팀원들에게 전할지 걱정이 됐다.
 
 그래도 불행 중 다행으로 아직 팀이 만들어진지 얼마 안됐고, 개발도 하고 있지 않았기에 엄청 큰 영향은 없었다. 점심시간을 빌려 팀원들과 강사님께 말했고, 퇴원 수속은 눈 깜짝할 사이에 이루어졌다. (슬랙, 피그마, 노션 정말 빛의 속도로 퇴출당했다.)
 
