--- a/src/app/(contents)/2025-first-half/page.mdx
+++ b/src/app/(contents)/2025-first-half/page.mdx
@@ -219,4 +219,4 @@ export const meta = {
 
 난 아직도 내가 과연 잘할 수 있을지 의심이 되고 걱정이 된다. 하지만 나는 할 수 있다. 그렇게 믿는다.
 
-> 꿈을 크게 가져라, 부셔져도 그 조각이 클테니.
+> 꿈을 크게 가져라, 부서져도 그 조각이 클테니.
